add markdown parser, update dependencies

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/2.0.0/remarkable.min.js"></script>
   </head>
 
   <body>
@@ -123,6 +124,7 @@
         <div class="container-label">output</div>
         <div class="output-textarea-container">
           <textarea id="output" name="output" readonly aria-readonly></textarea>
+          <div id="rendered-output"></div>
         </div>
       </div>
     </div>
