add new feature to remove extra colons from attributes.  Fix styling of links in rendered output.

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,15 @@
             </select>
           </label>
         </div>
+        <div class="setting">
+          <label class="toggle-on-click" title="turns attributes:: into attributes:">
+            remove extra colon from attributes::?
+            <select id="remove-colon-from-attributes" class="hidden-select-setting">
+              <option value="false">No</option>
+              <option value="true">Yes</option>
+            </select>
+          </label>
+        </div>
         <div class="about">
           <div class="container-label">about</div>
           <p>
