--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div class="parent">
       <div class="header-container">
         <header>
-          <a href="https://roam-tools.ryanguill.com"
+          <a href="https://roam-tools.ryanguill.com" class="styled"
             >roam-tools.ryanguill.com</a
           >
         </header>
@@ -109,15 +109,15 @@
           <p>
             This is a __super__ beta, __super__ simple js application to
             automate a few transformations for your [[<a
-              href="https://roamresearch.com"
+              href="https://roamresearch.com" class="styled"
               >Roam</a
             >]] content. Any content you paste here only lives on your computer,
             nothing is sent anywhere, nothing is ever logged. <br />If you have
             any ideas feel free to reach out or contribute on [[<a
-              href="https://github.com/ryanguill/roam-tools"
+              href="https://github.com/ryanguill/roam-tools" class="styled"
               >github</a
             >]] or shout at me on twitter [[<a
-              href="https://twitter.com/ryanguill/"
+              href="https://twitter.com/ryanguill/" class="styled"
               >&NoBreak;@ryanguill</a
             >]]
           </p>
