add option to remove quotes.

--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,15 @@
             </select>
           </label>
         </div>
+        <div class="setting">
+          <label class="toggle-on-click" title="remove quotes">
+            remove quote marks?
+            <select id="remove-quotes" class="hidden-select-setting">
+              <option value="false">No</option>
+              <option value="true">Yes</option>
+            </select>
+          </label>
+        </div>
         <div class="about">
           <div class="container-label">about</div>
           <p>
