--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,15 @@
             </select>
           </label>
         </div>
+        <div class="setting">
+          <label class="toggle-on-click" title="remove hashtag marks">
+            remove #'s?
+            <select id="remove-hashtag-marks" class="hidden-select-setting">
+              <option value="false">No</option>
+              <option value="true">Yes</option>
+            </select>
+          </label>
+        </div>
         <div class="about">
           <div class="container-label">about</div>
           <p>
