add option to hide settings panel to help when embedding with preset options.

--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,15 @@
             </select>
           </label>
         </div>
+        <div class="setting">
+          <label class="toggle-on-click" title="hide this settings column">
+            hide options?
+            <select id="hide-settings" class="hidden-select-setting">
+              <option value="false">No</option>
+              <option value="true">Yes</option>
+            </select>
+          </label>
+        </div>
         <div class="about">
           <div class="container-label">about</div>
           <p>
