added a plug for the roam capture bookmarklet

--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
             >]] or shout at me on twitter [[<a
               href="https://twitter.com/ryanguill/" class="styled"
               >&NoBreak;@ryanguill</a
-            >]]
+          >]]. You may also be interested in my <a href="https://gist.io/@ryanguill/f82ce1a356c36d9258415168f3da9d27" class="styled">[[Roam Capture]]</a> bookmarklet.
           </p>
         </div>
       </div>
