add new options for flatten indentation to allow for 1,2 or 3 levels of de-indent on top of removing all indentation. #2

--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,11 @@
           >
             flatten indentation?
             <select id="flatten-indentation" class="hidden-select-setting">
-              <option value="false">No</option>
-              <option value="true">Yes</option>
+              <option value="0">No</option>
+              <option value="999">All</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
             </select>
           </label>
         </div>
