added new option to remove namespaces updated css of output to word wrap. updated version at the bottom. 20200705-01

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,18 @@
             </label>
           </div>
           <div class="setting">
+            <label
+              class="toggle-on-click"
+              title="removes namespaces from links"
+            >
+              remove namespaces?
+              <select id="remove-namespaces" class="hidden-select-setting" data-default="false">
+                <option value="false">No</option>
+                <option value="true">Yes</option>
+              </select>
+            </label>
+          </div>
+          <div class="setting">
             <label class="toggle-on-click" title="removes braces">
               remove {{braces}}?
               <select id="remove-double-braces" class="hidden-select-setting" data-default="false">
