--- a/src/index.html
+++ b/src/index.html
@@ -149,6 +149,15 @@
             </label>
           </div>
           <div class="setting">
+            <label class="toggle-on-click" title="remove todo and dones">
+              export LaTeX?
+              <select id="export-latex" class="hidden-select-setting" data-default="false">
+                <option value="false">No</option>
+                <option value="true">Yes</option>
+              </select>
+            </label>
+          </div>
+          <div class="setting">
             <label class="toggle-on-click" title="hide this settings column">
               hide options?
               <select id="hide-settings" class="hidden-select-setting" data-default="false">
@@ -175,7 +184,7 @@
               >&NoBreak;@ryanguill</a
           >]]. You may also be interested in my <a href="https://gist.io/@ryanguill/f82ce1a356c36d9258415168f3da9d27" class="styled">[[Roam Capture]]</a> bookmarklet or my <a href="https://greasyfork.org/en/scripts/402699-ryan-guill-s-roam-experiments-roamresearch-com" class="styled">User-Script Experiments</a>.
           </p>
-          version 20200717-01
+          version 20200905-01
         </div>
       </div>
       <div class="input-container container">
